# clipboard_translator

./: README.md  \  cbt.py  cbt.sh  pyproject.toml  setup.sh  translate.py
